# py_name_entity_normalization

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: how_to_use_guide.md  vector_db_creation_guide.md
src/pyNameEntityNormalization/: __init__.py  cli.py  config.py
src/pyNameEntityNormalization/core/: engine.py  interfaces.py  schemas.py
src/pyNameEntityNormalization/database/: dal.py
src/pyNameEntityNormalization/embedders/: factory.py  sentence_transformer.py
src/pyNameEntityNormalization/indexer/: builder.py
src/pyNameEntityNormalization/rankers/: cosine.py  cross_encoder.py  llm.py
src/py_name_entity_normalization/: __init__.py  cli.py  config.py
src/py_name_entity_normalization/core/: __init__.py  engine.py  interfaces.py  schemas.py
src/py_name_entity_normalization/database/: __init__.py  connection.py  dal.py  models.py
src/py_name_entity_normalization/embedders/: __init__.py  factory.py  sentence_transformer.py
src/py_name_entity_normalization/indexer/: __init__.py  builder.py
src/py_name_entity_normalization/rankers/: __init__.py  cosine.py  cross_encoder.py  factory.py  llm.py
src/py_name_entity_normalization/utils/: __init__.py  preprocessing.py
tests/: __init__.py  conftest.py  test_cli.py  test_core_interfaces.py  test_dal_unit.py  test_database.py  test_embedders.py  test_engine.py  test_indexer.py  test_integration.py  test_rankers.py  test_utils.py
